--- a/src/MMT.UI/MainWindow.xaml
+++ b/src/MMT.UI/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<mah:MetroWindow  x:Class="MMT.UI.MainWindow"
+<mah:MetroWindow  x:Class="MMT.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -25,7 +25,7 @@
         <Grid.RowDefinitions>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        
+
         <TextBlock Grid.Row="0" HorizontalAlignment="Right" Margin="10">
             <Hyperlink NavigateUri="https://github.com/TonCunha/multi-microsoft-teams" RequestNavigate="Hyperlink_RequestNavigate">
                 Github
@@ -94,12 +94,7 @@
             </TabItem>
         </TabControl>
 
-        <tb:TaskbarIcon x:Name="_tray" 
-                        Icon="{x:Static local:Resource.Taskbar}" 
-                        ToolTipText="{x:Static core:StaticResources.AppName}" 
-                        Visibility="Collapsed" 
-                        TrayMouseDoubleClick="TrayMouseDoubleClick" 
-                        ContextMenu="{StaticResource trayContextMenu}" 
-        />
+        <!--<tb:TaskbarIcon x:Name="_tray" Icon="{x:Static local:Resource.Taskbar}" ToolTipText="{x:Static core:StaticResources.AppName}" Visibility="Collapsed" 
+                        TrayMouseDoubleClick="TrayMouseDoubleClick" ContextMenu="{StaticResource trayContextMenu}" />-->
     </Grid>
 </mah:MetroWindow>
