--- a/src/MMT.UI/MainWindow.xaml
+++ b/src/MMT.UI/MainWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:local="clr-namespace:MMT.UI"
         mc:Ignorable="d"
         xmlns:tb="http://www.hardcodet.net/taskbar"
-        Title="Multi Microsoft Teams" Height="250" Width="400" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" StateChanged="MetroWindow_StateChanged">
+        Title="Multi Microsoft Teams" Height="250" Width="400" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Closing="MetroWindow_Closing">
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <ContextMenu ItemsSource="{Binding Profiles}"  x:Key="trayContextMenu">
@@ -93,8 +93,5 @@
                 </Grid>
             </TabItem>
         </TabControl>
-
-        <!--<tb:TaskbarIcon x:Name="_tray" Icon="{x:Static local:Resource.Taskbar}" ToolTipText="{x:Static core:StaticResources.AppName}" Visibility="Collapsed" 
-                        TrayMouseDoubleClick="TrayMouseDoubleClick" ContextMenu="{StaticResource trayContextMenu}" />-->
     </Grid>
 </mah:MetroWindow>
